app/assets/stylesheets/images.css
.profile-pic-icon {
  width: 42px;
  height: 42px;
  background-color: whitesmoke;
  object-fit: cover;
  border-radius: 50%;
  flex-shrink: 0;
}

.profile-pic.comment {
  width: 40px;
  height: 40px;
  background-color: whitesmoke;
  object-fit: cover;
  border-radius: 50%;
  flex-shrink: 0;
}

.preview-avatar {
  display: inline-block;
  width: 200px;
  height: 200px;
  border-radius: 50%;
  object-fit: cover;
}

.image-preview {
  box-sizing: border-box;
  align-self: flex-start;
  display: none;
  position: relative;
  padding: 6px;
  border-radius: 5px;
  border: 1px solid lightgrey;
  background-color: transparent;
}

.post-container.published > a {
  margin-bottom: 8px;
}

.post-image {
  display: block;
  max-width: 300px;
  max-height: 300px;
  border-radius: 5px;
}

.cropper-image-preview {
  display: block;
  max-width: 200px;
  max-height: 200px;
  object-fit: scale-down;
}

.overlay {
  box-sizing: border-box;
  position: absolute;
  width: 100%;
  height: 100%;
  background-color: transparent;
  padding: 6px;
  top: 0;
  left: 0;
}

.overlay:hover {
  background-color: rgba(0, 0, 0, 0.2);
  background-clip: content-box;
  border-radius: 5px;
}

.page.overlay {
  position: fixed;
  display: none;
  background-color: white;
  opacity: 0.5;
  padding: 0;
  z-index: 8;
  justify-content: center;
  align-items: center;
}

.image-preview > .overlay > .mdi.mdi-close {
  display: none;
}

.image-preview > .overlay:hover > .mdi.mdi-close {
  display: inline;
  background-color: white;
  padding: 8px;
  position: absolute;
  top: 16px;
  right: 16px;
  border-radius: 50%;
  transform: rotateX(15deg);
  z-index: 2;
}

.friends-page .profile-pic,
.friend-requests-page .profile-pic {
  width: 100px;
  height: 100px;
  border-radius: 50%;
  object-fit: cover;
}

.profile-pic-icon.homepage-sidebar{
  width: 30px;
  height: 30px;
}

@media (max-width: 768px) {
  .preview-avatar {
    width: 140px;
    height: 140px;
  }

  .profile-pic-icon {
    width: 65px;
    height: 65px;
  }

  .post-container .profile-pic-icon {
    width: 45px;
    height: 45px;
  }

  .header-right .profile-pic-icon {
    display: none;
    position: absolute;
  }
}

